修改管理员相关路由
