# server/model/system/request/sys_casbin.go
@@ -16,7 +16,7 @@ func DefaultCasbin() []CasbinInfo {
 	return []CasbinInfo{
 		{Path: "/menu/getMenu", Method: "POST"},
 		{Path: "/jwt/jsonInBlacklist", Method: "POST"},
-		{Path: "/base/login", Method: "POST"},
+		{Path: "/client/login", Method: "POST"},
 		{Path: "/user/admin_register", Method: "POST"},
 		{Path: "/user/changePassword", Method: "POST"},
 		{Path: "/user/setUserAuthority", Method: "POST"},
